--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
 />
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
   <app-root></app-root>
